src/objects/Google_Places__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Batch_Update_Period__c</fullName>
        <label>Batch Update Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Update_Size__c</fullName>
        <label>Batch Update Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geolocation_API_Key__c</fullName>
        <label>Geolocation API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Places_API_Key__c</fullName>
        <label>Places API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Google Places</label>
</CustomObject>